--- a/roles/contiv_network/tasks/ovs.yml
+++ b/roles/contiv_network/tasks/ovs.yml
@@ -15,6 +15,35 @@
   tags:
     - prebake-for-dev
 
+- name: download ovs binaries (debian)
+  get_url:
+    validate_certs: "{{ validate_certs }}"
+    dest: "{{ item.dest }}"
+    url: "{{ item.url }}"
+  with_items:
+    - {
+        url: "https://launchpad.net/ubuntu/+archive/primary/+files/openvswitch-common_2.4.0-0ubuntu4_amd64.deb",
+        dest: /tmp/ovs-common.deb
+      }
+    - {
+        url: "https://launchpad.net/ubuntu/+archive/primary/+files/openvswitch-switch_2.4.0-0ubuntu4_amd64.deb",
+        dest: /tmp/ovs-switch.deb
+      }
+  when: ansible_os_family == "Debian"
+  tags:
+    - prebake-for-dev
+
+- name: install ovs-common (debian)
+  apt: "deb=/tmp/ovs-common.deb"
+  when: ansible_os_family == "Debian"
+  tags:
+    - prebake-for-dev
+
+- name: install ovs (debian)
+  apt: "deb=/tmp/ovs-switch.deb"
+  when: ansible_os_family == "Debian"
+  tags:
+    - prebake-for-dev
 
 - name: start ovs service
   service: "name=openvswitch enabled=yes state=started"
