--- a/roles/contiv_network/defaults/main.yml
+++ b/roles/contiv_network/defaults/main.yml
@@ -16,9 +16,9 @@ bgp_port: 179
 vxlan_port: 4789
 netplugin_rule_comment: "contiv network traffic"
 
-contiv_network_version: "netpluginSR-07-05-2016"
+contiv_network_version: "netpluginSR-07-08-2016"
 contiv_network_tar_file: "{{ contiv_network_version }}.tar.bz2"
-contiv_network_src_file: "https://github.com/Tlaskey/netplugin/releases/download/v0.1-07-05-2016/netpluginSR-07-05-2016.tar.bz2"
+contiv_network_src_file: "https://github.com/Tlaskey/netplugin/releases/download/NetpluginSR/netpluginSR-07-08-2016.tar.bz2"
 contiv_network_dest_file: "/tmp/{{ contiv_network_tar_file }}"
 
 contivctl_version_no_v: "0.1-05-26-2016.22-31-22.UTC"
