--- a/site.yml
+++ b/site.yml
@@ -29,6 +29,7 @@
   - { role: ceph-osd, mon_group_name: volplugin-test, osd_group_name: volplugin-test }
   - { role: scheduler_stack, run_as: master }
   - { role: contiv_network, run_as: master }
+  - { role: openBMP }
 
 # cluster-node hosts corresponds to the hosts that shall be managed by cluster manager.
 # This host group shall provision a host with all required packages needed to make
@@ -91,3 +92,4 @@
   - { role: etcd, run_as: master }
   - { role: scheduler_stack, run_as: master }
   - { role: contiv_network, run_as: master }
+  - { role: openBMP }
