--- a/roles/openBMP/tasks/main.yml
+++ b/roles/openBMP/tasks/main.yml
@@ -5,5 +5,6 @@
 
 - name: Create MySQL volumes
   command: mkdir -p /var/openbmp/mysql
-  command: chmod 777 /var/openbmp/mysql
 
+- name: Set Permissions
+  command: chmod 777 /var/openbmp/mysql
