--- a/roles/openBMP/tasks/main.yml
+++ b/roles/openBMP/tasks/main.yml
@@ -9,5 +9,5 @@
 - name: Set Permissions
   command: chmod 777 /var/openbmp/mysql
 
-#- name: Run Docker Container
-#  command: docker run -d --name=openbmp_aio -e API_FQDN=localhost -v /var/openbmp/mysql:/data/mysql -p 3306:3306 -p 2181:2181 -p 9092:9092 -p 5000:5000 -p 8001:8001 openbmp/aio
+- name: Run Docker Container
+  command: docker run -d --name=openbmp_aio -e API_FQDN=localhost -v /var/openbmp/mysql:/data/mysql -p 3306:3306 -p 2181:2181 -p 9092:9092 -p 5000:5000 -p 8001:8001 openbmp/aio
